# cima

./: .gitignore  README.md  ROADMAP.md  start_cima.sh
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  precios_cache.json  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/adapters/: __init__.py  cuadrate.py
backend/app/auth/: deps.py  passwords.py  ratelimit.py  tokens.py
backend/app/db/: __init__.py  base.py  models.py
backend/app/routers/: __init__.py  analisis.py  aportaciones.py  asesor.py  auditoria.py  auth.py  bills.py  bloques.py  bootstrap.py  cartera.py  complejos.py  config.py  (+24 more)
backend/scripts/: sync_cuadrate.py
backend/tests/: conftest.py  test_adapter_degiro.py  test_adapter_degiro_cuenta.py  test_adapter_ibkr.py  test_aportaciones.py  test_asesor.py  test_audit_backlog.py  test_audit_tanda1.py  test_audit_tanda2.py  test_audit_tanda3.py  test_audit_tanda4.py  test_auditoria.py  test_auth.py  test_bloques.py  test_clasificador.py  test_comps.py  test_config.py  test_criterios.py  test_cuadrate_irpf.py  test_dashboard.py  test_dedup_sin_id.py  test_dividendos.py  test_estimaciones.py  test_fifo_interbroker.py  test_fiscal_acumulado.py  test_fiscal_contexto.py  test_fiscal_endpoint.py  test_fiscal_regression.py  test_fiscal_resumen.py  test_fiscal_service.py  test_forex_intereses_bills_complejos.py  test_friccion.py  test_fugas_fiscales.py  test_g_div_asistido.py  test_health.py  test_historico.py  test_hoja_ruta.py  test_impacto_if.py  test_import_estado.py  test_importar_extractos_endpoints.py  (+26 more)
(+154 files in other folders)
