[project]
name = "cima-backend"
version = "0.0.1"
description = "Cima — backend API. Tracker con estrategia + motor fiscal español."
requires-python = ">=3.12"
authors = [{ name = "Cima Team" }]
license = { text = "Proprietary — internal" }

dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic[email]>=2.6",
    "pydantic-settings>=2.2",
    "python-dotenv>=1.0",
    "sqlalchemy>=2.0",
    "python-multipart>=0.0.9",  # uploads para POST /api/import
    "requests>=2.31",           # feed de precios (FMP, OpenFIGI)
    "yfinance>=0.2",            # precios + fundamentales
    "psycopg2-binary>=2.9",     # driver Postgres síncrono (producción)
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.3",
    "black>=24.2",
    "mypy>=1.9",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "RUF"]
ignore = ["E501"]  # black ya cubre line length

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
strict = true
python_version = "3.12"
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
